# sentinel

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
src/: agent.rs  cli.rs  event.rs  main.rs  parsers.rs  proxy.rs  sse.rs  storage.rs
web/: package-lock.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AgentAvatar.tsx  AgentList.tsx  EventDetailPanel.tsx  EventFlow.tsx  EventList.tsx
web/src/components/nodes/: ActivityNode.tsx  EventNode.tsx
web/src/hooks/: useHashRoute.ts  useSSE.ts
