[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "Flight recorder for AI agent workflows"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] } 
reqwest = { version = "0.12", features = ["stream", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
tower-http = { version = "0.5", features = ["trace"] }
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
tokio-stream = "0.1"
dirs = "5"
futures-util = "0.3.31"
async-stream = "0.3.6"
